[gd_scene load_steps=11 format=3 uid="uid://c3l7itki7dyc5"]

[ext_resource type="Script" path="res://scripts/global/game_control.gd" id="1_ybfl2"]
[ext_resource type="PackedScene" uid="uid://8perof1x4lj2" path="res://scenes/tilemap_main.tscn" id="2_wfs6h"]
[ext_resource type="Script" path="res://scripts/global/OurCam.gd" id="4_71376"]
[ext_resource type="PackedScene" uid="uid://b2pdm87dj1ys8" path="res://scenes/gui.tscn" id="5_23lu3"]
[ext_resource type="PackedScene" uid="uid://bmxafsj7i4ru2" path="res://ui/interface/interface.tscn" id="5_m5lwb"]
[ext_resource type="AudioStream" uid="uid://doklfvdntoyw6" path="res://assets/audio/mixkit-island-beat-250.mp3" id="6_jvfx1"]
[ext_resource type="Script" path="res://assets/audio/Background_music.gd" id="7_wvqdj"]
[ext_resource type="PackedScene" uid="uid://jhtkraqldyme" path="res://scenes/test_scene.tscn" id="8_j58jo"]
[ext_resource type="Script" path="res://scripts/global/timer.gd" id="9_m3j6i"]

[sub_resource type="ButtonGroup" id="ButtonGroup_0o6q2"]

[node name="Main" type="Node"]
script = ExtResource("1_ybfl2")

[node name="Tilemap Main" parent="." instance=ExtResource("2_wfs6h")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("4_71376")
EDGE_SCROLL = false

[node name="Interface" parent="Camera2D" instance=ExtResource("5_m5lwb")]
offset_left = -575.0
offset_top = -324.0
offset_right = 573.0
offset_bottom = 321.0

[node name="OptionButton" type="OptionButton" parent="Camera2D"]
offset_left = 34.0
offset_top = -324.0
offset_right = 128.0
offset_bottom = -293.0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_0o6q2")
alignment = 1
text_overrun_behavior = 1
clip_text = true
item_count = 3
selected = 1
popup/item_0/text = "Pause"
popup/item_0/id = 0
popup/item_1/text = "Play"
popup/item_1/id = 1
popup/item_2/text = "Fast"
popup/item_2/id = 2

[node name="Gui" parent="Camera2D" instance=ExtResource("5_23lu3")]
visible = false
offset_left = -578.0
offset_top = -323.0
offset_right = 574.0
offset_bottom = 326.0

[node name="Background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jvfx1")
volume_db = -5.596
autoplay = true
script = ExtResource("7_wvqdj")

[node name="TestScene" parent="." instance=ExtResource("8_j58jo")]
visible = false
position = Vector2(-1, 0)
discard_cost = 50

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource("9_m3j6i")

[connection signal="item_selected" from="Camera2D/OptionButton" to="Timer" method="_on_option_button_item_selected"]
[connection signal="ready" from="TestScene" to="." method="_on_test_scene_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
